--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.3.3
-Pillow==10.0.1
-requests==2.31.0
-python-dotenv==1.0.0
+python-telegram-bot==13.7
+pydub==0.25.1
+Pillow==8.3.1
+requests==2.26.0
